// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test component: cookiesView should render correctly '<CookiesView />' when content is loaded w/options. 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="cookie-window-open"
      >
        <div
          aria-hidden="false"
          class="MuiBackdrop-root backdrop"
          style="opacity: 1; webkit-transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="cookie-window"
          >
            <div
              class="cookie-window-caption"
            >
              Cookie Policy
            </div>
            <div
              class="cookie-window-box"
            >
              <div
                class="cookie-window-section"
              >
                <p
                  class="cookie-window-section-text"
                >
                  We use cookies to personalise content...
                </p>
              </div>
              <div
                class="cookie-window-section"
              >
                <p
                  class="cookie-window-section-detail"
                >
                  With your consent, we may also...
                </p>
                <div
                  class="cookie-window-options-list"
                >
                  <label
                    class="cookie-window-checkbox pointer-not-allowed"
                  >
                    <input
                      checked=""
                      class="cookie-window-checkbox-input"
                      disabled=""
                      type="checkbox"
                    />
                    <span
                      class="cookie-window-checkbox-visual-input"
                    />
                    <span
                      class="cookie-window-checkbox-label"
                    >
                      Necessary
                    </span>
                  </label>
                  <label
                    class="cookie-window-checkbox"
                  >
                    <input
                      class="cookie-window-checkbox-input"
                      type="checkbox"
                    />
                    <span
                      class="cookie-window-checkbox-visual-input"
                    />
                    <span
                      class="cookie-window-checkbox-label"
                    >
                      Statistics
                    </span>
                  </label>
                  <label
                    class="cookie-window-checkbox"
                  >
                    <input
                      class="cookie-window-checkbox-input"
                      type="checkbox"
                    />
                    <span
                      class="cookie-window-checkbox-visual-input"
                    />
                    <span
                      class="cookie-window-checkbox-label"
                    >
                      Marketing
                    </span>
                  </label>
                  <label
                    class="cookie-window-checkbox"
                  >
                    <input
                      class="cookie-window-checkbox-input"
                      type="checkbox"
                    />
                    <span
                      class="cookie-window-checkbox-visual-input"
                    />
                    <span
                      class="cookie-window-checkbox-label"
                    >
                      Personalization
                    </span>
                  </label>
                </div>
                <div
                  class="cookie-window-actions"
                >
                  <button
                    class="cookie-window-button cookie-window-button-accent cookie-window-action"
                  >
                    Accept All
                  </button>
                  <button
                    class="cookie-window-button cookie-window-action"
                  >
                    Manage Settings
                  </button>
                  <button
                    class="cookie-window-button"
                  >
                    Close
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="cookie-window-open"
    >
      <div
        aria-hidden="false"
        class="MuiBackdrop-root backdrop"
        style="opacity: 1; webkit-transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      >
        <div
          class="cookie-window"
        >
          <div
            class="cookie-window-caption"
          >
            Cookie Policy
          </div>
          <div
            class="cookie-window-box"
          >
            <div
              class="cookie-window-section"
            >
              <p
                class="cookie-window-section-text"
              >
                We use cookies to personalise content...
              </p>
            </div>
            <div
              class="cookie-window-section"
            >
              <p
                class="cookie-window-section-detail"
              >
                With your consent, we may also...
              </p>
              <div
                class="cookie-window-options-list"
              >
                <label
                  class="cookie-window-checkbox pointer-not-allowed"
                >
                  <input
                    checked=""
                    class="cookie-window-checkbox-input"
                    disabled=""
                    type="checkbox"
                  />
                  <span
                    class="cookie-window-checkbox-visual-input"
                  />
                  <span
                    class="cookie-window-checkbox-label"
                  >
                    Necessary
                  </span>
                </label>
                <label
                  class="cookie-window-checkbox"
                >
                  <input
                    class="cookie-window-checkbox-input"
                    type="checkbox"
                  />
                  <span
                    class="cookie-window-checkbox-visual-input"
                  />
                  <span
                    class="cookie-window-checkbox-label"
                  >
                    Statistics
                  </span>
                </label>
                <label
                  class="cookie-window-checkbox"
                >
                  <input
                    class="cookie-window-checkbox-input"
                    type="checkbox"
                  />
                  <span
                    class="cookie-window-checkbox-visual-input"
                  />
                  <span
                    class="cookie-window-checkbox-label"
                  >
                    Marketing
                  </span>
                </label>
                <label
                  class="cookie-window-checkbox"
                >
                  <input
                    class="cookie-window-checkbox-input"
                    type="checkbox"
                  />
                  <span
                    class="cookie-window-checkbox-visual-input"
                  />
                  <span
                    class="cookie-window-checkbox-label"
                  >
                    Personalization
                  </span>
                </label>
              </div>
              <div
                class="cookie-window-actions"
              >
                <button
                  class="cookie-window-button cookie-window-button-accent cookie-window-action"
                >
                  Accept All
                </button>
                <button
                  class="cookie-window-button cookie-window-action"
                >
                  Manage Settings
                </button>
                <button
                  class="cookie-window-button"
                >
                  Close
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`test component: cookiesView should render correctly '<CookiesView />' when content is loaded. 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="cookie-window-open"
      >
        <div
          aria-hidden="false"
          class="MuiBackdrop-root backdrop"
          style="opacity: 1; webkit-transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="cookie-window"
          >
            <div
              class="cookie-window-caption"
            >
              Cookie Policy
            </div>
            <div
              class="cookie-window-box"
            >
              <div
                class="cookie-window-section"
              >
                <p
                  class="cookie-window-section-text"
                >
                  We use cookies to personalise content...
                </p>
              </div>
              <div
                class="cookie-window-section"
              >
                <p
                  class="cookie-window-section-detail"
                >
                  With your consent, we may also...
                </p>
                <div
                  class="cookie-window-actions"
                >
                  <button
                    class="cookie-window-button cookie-window-button-accent cookie-window-action"
                  >
                    Accept All
                  </button>
                  <button
                    class="cookie-window-button cookie-window-action"
                  >
                    Manage Settings
                  </button>
                  <button
                    class="cookie-window-button"
                  >
                    Close
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="cookie-window-open"
    >
      <div
        aria-hidden="false"
        class="MuiBackdrop-root backdrop"
        style="opacity: 1; webkit-transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      >
        <div
          class="cookie-window"
        >
          <div
            class="cookie-window-caption"
          >
            Cookie Policy
          </div>
          <div
            class="cookie-window-box"
          >
            <div
              class="cookie-window-section"
            >
              <p
                class="cookie-window-section-text"
              >
                We use cookies to personalise content...
              </p>
            </div>
            <div
              class="cookie-window-section"
            >
              <p
                class="cookie-window-section-detail"
              >
                With your consent, we may also...
              </p>
              <div
                class="cookie-window-actions"
              >
                <button
                  class="cookie-window-button cookie-window-button-accent cookie-window-action"
                >
                  Accept All
                </button>
                <button
                  class="cookie-window-button cookie-window-action"
                >
                  Manage Settings
                </button>
                <button
                  class="cookie-window-button"
                >
                  Close
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`test component: cookiesView should render correctly '<CookiesView />' when content is loading. 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="cookie-window-open"
      >
        <div
          aria-hidden="false"
          class="MuiBackdrop-root backdrop"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="cookie-window"
          >
            <div
              class="cookie-window-caption"
            >
              Cookie Policy
            </div>
            <div
              class="cookie-window-box"
            >
              <div
                class="cookie-window-section cookie-window-section-fixed-height cookie-window-section-left"
              >
                <p
                  class="cookie-window-section-text cookie-window-section-left"
                >
                  Loading...
                </p>
                <p
                  class="cookie-window-section-text cookie-window-section-left"
                >
                  Please wait...
                  <span
                    class="cookie-window-caret"
                  />
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="cookie-window-open"
    >
      <div
        aria-hidden="false"
        class="MuiBackdrop-root backdrop"
        style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      >
        <div
          class="cookie-window"
        >
          <div
            class="cookie-window-caption"
          >
            Cookie Policy
          </div>
          <div
            class="cookie-window-box"
          >
            <div
              class="cookie-window-section cookie-window-section-fixed-height cookie-window-section-left"
            >
              <p
                class="cookie-window-section-text cookie-window-section-left"
              >
                Loading...
              </p>
              <p
                class="cookie-window-section-text cookie-window-section-left"
              >
                Please wait...
                <span
                  class="cookie-window-caret"
                />
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
